--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,10 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to my research website. This is my documentation for the associations studies regarding 
+
+* [Creating the Dosage Files](pred_dosages.html) 
+
+* [Running PrediXcan](pwas.html)
+
+* [GEMMA Association Studies](association_studies_gemma.html)
