--- a/analysis/creatinine_clearance.Rmd
+++ b/analysis/creatinine_clearance.Rmd
@@ -170,8 +170,8 @@ Histograms are all saved under `/home/rhea/account_wflow/phenos/{drug}`.
 
 ```{}
 
-clop_ids <- fread("/home/rhea/account_wflow/vcfs/clop/clop_ids_CrCl.txt")
-noac_ids <- fread("/home/rhea/account_wflow/vcfs/noac/noac_ids_CrCl.txt")
+clop_ids <- fread("/home/rhea/account_wflow/vcfs/blacks_imputed/clop/clop_ids_CrCl.txt")
+noac_ids <- fread("/home/rhea/account_wflow/vcfs/blacks_imputed/noac/noac_ids_CrCl.txt")
 
 clop_noac_ids <- union_all(clop_ids, noac_ids)
 fwrite(clop_noac_ids, "clop_noac_CrCl_ids.txt")
@@ -185,26 +185,31 @@ using merged samples file...
 ```{}
 #split vcf by pulling out clop & noac data using combined ID file
 for chr in {1..22};
-do vcftools --gzvcf /home/rhea/account_wflow/vcfs/blacks_imputed/CrCl/chr${chr}_maf01_r28.vcf.gz --keep /home/rhea/account_wflow/vcfs/clop_noac/clop_noac_CrCl_ids.txt --recode --recode-INFO-all --out clop_noac_chr${chr};
+do vcftools --gzvcf /home/ashley/account/vcfs/blacks_imputed/all/chr${chr}_maf01_r28.vcf.gz --keep /home/rhea/account_wflow/vcfs/blacks_imputed/clop_noac/clop_noac_CrCl_ids.txt --recode --recode-INFO-all --out clop_noac_chr${chr};
 done
+
+#gzip new vcf files
+gzip clop_noac_chr*.recode.vcf
 
 # Use vcf_to_dosage.py to output dosage txt files
 for chr in {1..22};
-do python /home/rhea/account_wflow/vcfs/vcf_to_dosage.py -i /home/rhea/account_wflow/vcfs/CrCl/clop_noac/ -c ${chr} -d clop_noac;
+do python /home/rhea/account_wflow/vcfs/vcf_to_dosage.py -i /home/rhea/account_wflow/vcfs/blacks_imputed/clop_noac/ -c ${chr} -d clop_noac;
 done
+
+#gzip new dosage files
+gzip clop_noacchr*.dosage.txt
 
 ```
 
 create merged samples_clop_noac.txt file
 
-### Run PWAS - not done
+### Run PWAS
 
 ```{}
 
 #Run PrediXcan with drug groups and protein models:
-#Clop
 
-declare -a drugs=("clop")
+declare -a drugs=("clop_noac")
 declare -a model_pops=("AFA" "ALL" "CAU" "CHN" "HIS")
 
 for model_pop in ${model_pops[@]}
@@ -213,42 +218,26 @@ for model_pop in ${model_pops[@]}
     do
     python3 /home/wheelerlab3/MetaXcan/software/Predict.py \
     --model_db_path /home/ryan/TOPMed_Proteome/dbs_out/${model_pop}_PCAIR_baseline_models_PAV_filtered_rho0.1_zpval0.05.db \
-    --text_genotypes /home/ashley/account/dosages/blacks/${drug}/pred_dosages/${drug}_chr*.dosage.txt.gz \
-    --text_sample_ids /home/ashley/account/dosages/blacks/${drug}/samples_clop_noac.txt \
-    --prediction_output /home/ashley/account/pwas_results/blacks/${drug}/predicted_levels/blacks_${drug}_PCAIR_PAV_filtered_${model_pop}_baseline_rho0.1_zpval0.05.txt
-  done
-done
-
-#NOAC
-
-declare -a drugs=("noac")
-declare -a model_pops=("AFA" "ALL" "CAU" "CHN" "HIS")
-
-for model_pop in ${model_pops[@]}
-  do
-  for drug in ${drugs[@]}
-    do
-    python3 /home/wheelerlab3/MetaXcan/software/Predict.py \
-    --model_db_path /home/ryan/TOPMed_Proteome/dbs_out/${model_pop}_PCAIR_baseline_models_PAV_filtered_rho0.1_zpval0.05.db \
-    --text_genotypes /home/ashley/account/dosages/blacks/${drug}/pred_dosages/${drug}_chr*.dosage.txt.gz \
-    --text_sample_ids /home/ashley/account/dosages/blacks/${drug}/samples_${drug}.txt \
-    --prediction_output /home/ashley/account/pwas_results/blacks/${drug}/predicted_levels/blacks_${drug}_PCAIR_PAV_filtered_${model_pop}_baseline_rho0.1_zpval0.05.txt
+    --text_genotypes /home/rhea/account_wflow/dosages/blacks/clop_noac/pred_dosages/clop_noacchr*.dosage.txt.gz \
+    --text_sample_ids /home/rhea/account_wflow/dosages/blacks/clop_noac/samples_clop_noac.txt \
+    --prediction_output /home/rhea/account_wflow/pwas_results/blacks/${drug}/predicted_levels/blacks_${drug}_PCAIR_PAV_filtered_${model_pop}_baseline_rho0.1_zpval0.05.txt
   done
 done
 
 ```
 
-### Convert PrediXcan Output to GEMMA input - not done
+### Convert PrediXcan Output to GEMMA input
 
 ```{}
+
 library(data.table)
 "%&%" = function(a,b) paste(a,b,sep="")
-model_list <- c("AFA", "CAU", "HIS", "CHN", "ALL")
-drug_list <- c("clop")
+model_list <- c("AFA", "HIS", "CHN", "ALL")
+drug_list <- c("clop_noac")
 
 for(model in model_list){
   for(drug in drug_list){
-    pred_exp <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/predicted_levels/blacks_" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_WG_baseline_rho0.1_zpval0.05.txt", header = F) #path to PrediXcan-produced _predicted_expression.txt
+    pred_exp <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/predicted_levels/blacks_" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.txt", header = F) #path to PrediXcan-produced _predicted_expression.txt
     pred_exp$V1 <- NULL
     pred_exp$V2 <- NULL
     pred_exp <- transpose(pred_exp)
@@ -259,14 +248,38 @@ for(model in model_list){
     pred_exp$V1 <- NA
     colnames(gene_list) <- "V"
     pred_exp <- cbind(gene_list, pred_exp)
-    fwrite(pred_exp, "/home/ashley/account/pwas_results/blacks/" %&% drug %&% "/assoc_gemma_input/blacks_" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05_gemma.txt", na = "NA", quote = F, sep = "\t", col.names = F) #path to GEMMA input/pseudo-genotype
+    fwrite(pred_exp, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/assoc_gemma_input/blacks_" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05_gemma.txt", na = "NA", quote = F, sep = "\t", col.names = F) #path to GEMMA input/pseudo-genotype
   }
 }
+```
+
+### Run Covariates
+Create bed/bim/fam files for each drug based on the list of IDs
+```{}
+plink --bfile /home/rhea/account_wflow/vcfs/preimputation_plinkfiles/ACCOuNTBLACKSfinal_updated --keep /home/rhea/account_wflow/vcfs/blacks_imputed/clop_noac/clop_noac_CrCl_ids_filt.txt --make-bed --out pre_imputed_blacks_clop_noac
 ```
 
 ### Run GEMMA - not done
 
 ```{}
+
+declare -a drugs=("clop_noac)
+declare -a models=("ALL" "AFA" "CHN" "HIS")
+
+#Use loop to run PrediXcan step two through GEMMA (accounts for relatedness)
+for drug in ${drugs[@]}
+  do
+  for model in ${models[@]}
+    do
+    /usr/local/bin/gemma -g /home/rhea/account_wflow/pwas_results/blacks/${drug}/assoc_gemma_input/blacks_${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05_gemma.txt \
+    -notsnp \
+    -p /home/ashley/account/phenos/${drug}/${drug}_pheno_no_ids.txt \
+    -k /home/ashley/account/covariates/${drug}/blacks_${drug}.cXX.txt \
+    -c /home/ashley/account/covariates/${drug}/${drug}_covariates.txt \
+    -lmm 4 \
+    -o ${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05
+  done
+done
 
 ```
 
