--- a/analysis/creatinine_clearance.Rmd
+++ b/analysis/creatinine_clearance.Rmd
@@ -174,7 +174,7 @@ clop_ids <- fread("/home/rhea/account_wflow/vcfs/blacks_imputed/clop/clop_ids_Cr
 noac_ids <- fread("/home/rhea/account_wflow/vcfs/blacks_imputed/noac/noac_ids_CrCl.txt")
 
 clop_noac_ids <- union_all(clop_ids, noac_ids)
-fwrite(clop_noac_ids, "clop_noac_CrCl_ids.txt")
+fwrite(clop_noac_ids, "clop_noac_ids.txt")
 
 ```
 
@@ -254,16 +254,13 @@ for(model in model_list){
 ```
 
 ### Run Covariates
-Create bed/bim/fam files for each drug based on the list of IDs
-```{}
-plink --bfile /home/rhea/account_wflow/vcfs/preimputation_plinkfiles/ACCOuNTBLACKSfinal_updated --keep /home/rhea/account_wflow/vcfs/blacks_imputed/clop_noac/clop_noac_CrCl_ids_filt.txt --make-bed --out pre_imputed_blacks_clop_noac
-```
+Check index/covariates
 
 ### Run GEMMA - not done
 
 ```{}
 
-declare -a drugs=("clop_noac)
+declare -a drugs=("clop_noac")
 declare -a models=("ALL" "AFA" "CHN" "HIS")
 
 #Use loop to run PrediXcan step two through GEMMA (accounts for relatedness)
@@ -273,9 +270,9 @@ for drug in ${drugs[@]}
     do
     /usr/local/bin/gemma -g /home/rhea/account_wflow/pwas_results/blacks/${drug}/assoc_gemma_input/blacks_${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05_gemma.txt \
     -notsnp \
-    -p /home/ashley/account/phenos/${drug}/${drug}_pheno_no_ids.txt \
-    -k /home/ashley/account/covariates/${drug}/blacks_${drug}.cXX.txt \
-    -c /home/ashley/account/covariates/${drug}/${drug}_covariates.txt \
+    -p /home/rhea/account_wflow/phenos/${drug}/${drug}_pheno_no_ids.txt \
+    -k /home/rhea/account_wflow/covariates/${drug}/blacks_${drug}.cXX.txt \
+    -c /home/rhea/account_wflow/covariates/${drug}/${drug}_covariates.txt \
     -lmm 4 \
     -o ${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05
   done
