--- a/analysis/creatinine_clearance.Rmd
+++ b/analysis/creatinine_clearance.Rmd
@@ -254,41 +254,9 @@ for(model in model_list){
 
 
 ### Run Covariates
-Check `Covariates` on Home.
+Check `Covariates` on Home. This is where the covariates file, phenotype file, and kinship files will be generated.
 
-### Adjust kinship files & combine
-Because a member of each drug group was removed since they switched drugs, the kinship file needs to reflect that. To do this, simply pull out the patient from each file as we had done before and rewrite a new kinship file. Then, combine the kinship files so it can be used in GEMMA accordingly.
-
-```{}
-
-#import original kinship files
-clop_kinship <- fread("/home/rhea/account_wflow/covariates/clop/blacks_clop.cXX.txt")
-noac_kinship <- fread("/home/rhea/account_wflow/coviarates/noac/blacks_noac.cXX.txt")
-
-#select rows to keep
-clop_kinship_keep <- clop_kinship[c(1:15, 17:142), ]
-noac_kinship_keep <- noac_kinship[c(1:6, 8:234), ]
-
-#double check dimensions with `dim` function
-
-#output adjusted files
-fwrite(clop_kinship_keep, "/home/rhea/account_wflow/covariates/clop/blacks_clop_adj.cXX.txt", col.names = F, sep = "\t", quote = F, na = " ")
-fwrite(noac_kinship_keep, "/home/rhea/account_wflow/covariates/noac/blacks_noac_adj.cXX.txt", col.names = F, sep = "\t", quote = F, na = " ")
-
-#combine kinship files
-clop_kinship_adj <- fread("/home/rhea/account_wflow/covariates/clop/blacks_clop_adj.cXX.txt")
-noac_kinship_adj <- fread("/home/rhea/account_wflow/covariates/noac/blacks_noac_adj.cXX.txt")
-
-kinship_cmbnd <- bind_rows(clop_kinship_adj, noac_kinship_adj, .id = NULL)
-
-#output combined kinship file
-fwrite(kinship_cmbnd, "/home/rhea/account_wflow/covariates/clop_noac/blacks_clop_noac.cXX.txt", col.names = F, sep = "\t", quote = F, na = " ")
-
-```
-
-### Run GEMMA - not done
-
-kinship matrix not equal!!!!!!!!
+### Run GEMMA
 
 ```{}
 
@@ -311,3 +279,198 @@ for drug in ${drugs[@]}
 done
 
 ```
+
+### Correct Bonferroni
+```{}
+#Import necessary libraries
+library(data.table)
+library(dplyr)
+library(tibble)
+
+#Create function to paste in drug name
+"%&%" = function(a,b) paste(a,b,sep="")
+
+#Create list for file input variants
+drug_list <- c("clop_noac")
+model_list <- c("ALL", "AFA", "CHN", "HIS") 
+
+#Make a data frame from combined PrediXcan results that includes chr #, bp, and BH and Bonferroni adj p-value
+  #Read in output files
+  #Create vector of p-values
+  #Adjust p-values with BH and bonferroni methods
+  #Add new columns with adjusted p-values to data frame
+  #Join PrediXcan data frame with bp_chrome data frame to add columns with chr # and bp
+  #Remove old/inaccurate chr and bp columns
+  #Ouput data frame into directory
+for (drug in drug_list) {
+  for (model in model_list) {
+    assoc_file <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/assoc_gemma_output/" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.assoc.txt")
+    pvalues <- select(assoc_file, contains("p_wald"))
+    pvalues <- as.vector(unlist(pvalues))
+    pvalues_adjusted_BH <- p.adjust(pvalues, method = "BH")
+    pvalues_adjusted_BF <- p.adjust(pvalues, method = "bonferroni")
+    assoc_file <- add_column(assoc_file,  pvalues_adjusted_BH = pvalues_adjusted_BH , .before = "p_lrt")
+    assoc_file <- add_column(assoc_file,  pvalues_adjusted_bonferroni = pvalues_adjusted_BF, .before = "p_lrt")
+    fwrite(assoc_file, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt", sep = "\t", quote = F)
+  }
+}
+```
+
+### Combine Significant Hits
+```{}
+#Import necessasry libraries
+library(data.table)
+library(dplyr)
+library(tibble)
+
+#Create function to paste in model name
+"%&%" = function(a,b) paste(a,b,sep="")
+
+#Create list of models for file input
+model_list <- c("ALL", "AFA")
+drug_list <- c("clop_noac")
+
+#Make a data frame with all results from each model per drug
+  #Read in file
+  #Add column containing model name
+  #Compile significant subsets into single data frame
+for(drug in drug_list){
+  for(model in model_list){
+    output <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt")
+    output <- add_column(output, model = model, .before = "chr")
+    output <- add_column(output, drug = drug, .before = "chr")
+    if(exists("all_assoc")){
+      all_assoc<-merge(x = all_assoc, y = output, all = TRUE)
+    }
+    else{
+      all_assoc<-output
+    }
+  }
+  
+  #subset at different thresholds
+  all_sig<-subset(all_assoc, pvalues_adjusted_BH < .75)
+  most_sig<-subset(all_assoc, pvalues_adjusted_BH < .1)
+  BF_not1<-subset(all_assoc, pvalues_adjusted_bonferroni < 1)
+  BF_sig<-subset(all_assoc, pvalues_adjusted_bonferroni < .05)
+   
+  #Output data frames into directory
+  fwrite(all_assoc, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_allassoc_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(all_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(most_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_most_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_not1, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFnot1_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFsig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+}
+```
+
+### Create Plots
+```{}
+library(data.table)
+library(dplyr)
+library(ggplot2)
+
+#PrediXcan PWAS Results:
+
+#Pheno files:
+clop_noac_pheno<-fread("/home/rhea/account_wflow/phenos/clop_noac/clop_noac_rn_pheno_no_ids.txt", header = F)
+clop_noac_samples<-fread("/home/rhea/account_wflow/dosages/blacks/clop_noac/samples_clop_noac.txt", header = F)
+
+x_clop_noac<-cbind(clop_noac_samples, clop_noac_pheno)
+colnames(x_clop_noac)<-c("FID", "IID", "pheno")
+ 
+#Predicted Expression files:
+y_clop_noac_Pred_AFA<-fread("/home/rhea/account_wflow/pwas_results/blacks/clop_noac/predicted_levels/blacks_clop_noac_PCAIR_PAV_filtered_AFA_baseline_rho0.1_zpval0.05.txt")
+
+
+#Plot Predicted Expression for IL5RA, for AFA Model, ALL pop, and Ara-C drug: *******???????********
+#Data file:
+xy_clop_noac_Pred_AFA<-inner_join(x_clop_noac, y_clop_noac_Pred_AFA, by = c("FID", "IID"))
+
+******
+ggplot(xy_clop_noac_Pred_AFA, aes(x = xy_clop_noac_Pred_AFA$SL006512_ENSG00000109758.8, y = xy_clop_noac_Pred_AFA$pheno)) +
+  geom_jitter(size = 0.75, color = "#ec328c") + 
+  geom_density_2d(color = "#ffbf24") + 
+  stat_smooth(method="lm", se = TRUE, fullrange = TRUE, color = "#8c1788") + 
+  scale_x_continuous(name = "Predicted protein levels") + 
+  scale_y_continuous(name = "Clopidogril_NOAC Dose (rank normalized)") + 
+  theme_bw() + 
+  theme(text = element_text(size = 12), plot.title = element_text(hjust = 0.5)) +
+  ggtitle("Clopidogril_NOAC Baseline AFA AFM")
+dev.off()
+```
+
+### Create qq & manhattan plots
+```{}
+#Import necessary libraries
+library(data.table)
+library(dplyr)
+library(qqman)
+library(colorspace)
+
+#Create function to paste in drug name
+"%&%" = function(a,b) paste(a,b,sep="")
+
+#Create color vector
+colors<-sequential_hcl(4,"SunsetDark")
+
+#Create list of drugs for file input
+drug_list <- c("clop_noac")
+model_list <- c("AFA", "ALL")
+
+#Make QQ and Manhattan plots using loop
+for(drug in drug_list){
+  for(model in model_list){
+    pwas_output <- fread("/home/rhea/account_wflow/pwas_results/blacks/clop_noac/assoc_gemma_output/clop_noac_PCAIR_PAV_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.assoc.txt")
+    anno <- fread("/home/ryan/topmed/proteome/proteome_with_multigene_expression/annotation_all_aptamers_ENSG.txt")
+    pwas_out_anno<-left_join(pwas_output, anno, by = c("rs" = "gene_id"))
+    pwas_out_anno$chr.y<-as.numeric(pwas_out_anno$chr.y)
+    
+    png(filename = "pwas_clop_noac_" %&% model %&% ".qqplot.png", res=100)
+    qq(pwas_out_anno$p_wald)
+    dev.off()
+
+    png(filename = "pwas_clop_noac_" %&% model %&% ".manplot.png", res=100)
+    manhattan(pwas_out_anno, chr = "chr.y", bp = "start", p = "p_wald", col = colors)
+    dev.off()
+  }
+}
+
+pwas_output_ALL <- fread("/home/rhea/account_wflow/pwas_results/blacks/clop_noac/assoc_gemma_output/clop_noac_PCAIR_PAV_filtered_ALL_baseline_rho0.1_zpval0.05.assoc.txt")
+pwas_out_anno_ALL<-left_join(pwas_output_ALL, anno, by = c("rs" = "gene_id"))
+pwas_out_anno_ALL$chr.y<-as.numeric(pwas_out_anno_ALL$chr.y)
+qq(pwas_out_anno_ALL$p_wald)
+manhattan(pwas_out_anno_ALL, chr = "chr.y", bp = "start", p = "p_wald", snp = "rs", col = colors)
+
+pwas_output_AFA <- fread("/home/rhea/account_wflow/pwas_results/blacks/clop_noac/assoc_gemma_output/clop_noac_PCAIR_PAV_filtered_ALL_baseline_rho0.1_zpval0.05.assoc.txt")
+pwas_out_anno_AFA<-left_join(pwas_output_AFA, anno, by = c("rs" = "gene_id"))
+pwas_out_anno_AFA$chr.y<-as.numeric(pwas_out_anno_AFA$chr.y)
+qq(pwas_out_anno_AFA$p_wald)
+manhattan(pwas_out_anno_AFA, chr = "chr.y", bp = "start", p = "p_wald", snp = "rs", col = colors)
+
+```
+
+### GWAS - GEMMA
+
+```{}
+
+declare -a drugs=("clop_noac")
+declare -a models=("ALL" "AFA" "CHN" "HIS")
+
+#Use loop to run PrediXcan step two through GEMMA (accounts for relatedness)
+for drug in ${drugs[@]}
+  do
+  for model in ${models[@]}
+    do
+    /usr/local/bin/gemma -g /home/rhea/account_wflow/pwas_results/blacks/clop_noac/assoc_gemma_input/blacks_clop_noac_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05_gemma.txt \
+    -notsnp \
+    -g /home/rhea/account_wflow/**/clop_noac/clop_noac_pheno_no_ids.txt \
+    -k /home/rhea/account_wflow/covariates/clop_noac/blacks_clop_noac.cXX.txt \
+    -c /home/rhea/account_wflow/covariates/clop_noac/clop_noac_covariates.txt \
+    -lmm 4 \
+    -o ${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05
+  done
+done
+
+```
+```
+
+
