--- a/analysis/pwas.Rmd
+++ b/analysis/pwas.Rmd
@@ -9,12 +9,14 @@ editor_options:
 
 ## Introduction
 
-This code runs PrediXcan with the protein models from TOPMed to output a matrix whih lists every protein level and combination a person has. 
+This code runs PrediXcan with the protein models from TOPMed to output a matrix which lists every protein level and combination a person has. 
 
 ## Run PrediXcan with all drug groups and protein models
 
 ```{}
-declare -a drugs=("clop" "apix" "riva" "warf")
+#Run PrediXcan with drug groups and protein models:
+
+declare -a drugs=("clop_noac")
 declare -a model_pops=("AFA" "ALL" "CAU" "CHN" "HIS")
 
 for model_pop in ${model_pops[@]}
@@ -23,25 +25,8 @@ for model_pop in ${model_pops[@]}
     do
     python3 /home/wheelerlab3/MetaXcan/software/Predict.py \
     --model_db_path /home/ryan/TOPMed_Proteome/dbs_out/${model_pop}_PCAIR_baseline_models_PAV_filtered_rho0.1_zpval0.05.db \
-    --text_genotypes /home/rhea/account_wflow/dosages/blacks/${drug}/pred_dosages/${drug}_chr*.dosage.txt.gz \
-    --text_sample_ids /home/ashley/account/dosages/blacks/${drug}/samples_${drug}.txt \
-    --prediction_output /home/rhea/account_wflow/pwas_results/blacks/${drug}/predicted_levels/blacks_${drug}_PCAIR_PAV_filtered_${model_pop}_baseline_rho0.1_zpval0.05.txt
-  done
-done
-
-#NOAC:
-
-declare -a drugs=("noac")
-declare -a model_pops=("AFA" "ALL" "CAU" "CHN" "HIS")
-
-for model_pop in ${model_pops[@]}
-  do
-  for drug in ${drugs[@]}
-    do
-    python3 /home/wheelerlab3/MetaXcan/software/Predict.py \
-    --model_db_path /home/ryan/TOPMed_Proteome/dbs_out/${model_pop}_PCAIR_baseline_models_PAV_filtered_rho0.1_zpval0.05.db \
-    --text_genotypes /home/rhea/account_wflow/dosages/blacks/${drug}/pred_dosages/${drug}_chr*.dosage.txt.gz \
-    --text_sample_ids /home/ashley/account/dosages/blacks/${drug}/samples_${drug}.txt \
+    --text_genotypes /home/rhea/account_wflow/dosages/blacks/clop_noac/pred_dosages/clop_noacchr*.dosage.txt.gz \
+    --text_sample_ids /home/rhea/account_wflow/dosages/blacks/clop_noac/samples_clop_noac.txt \
     --prediction_output /home/rhea/account_wflow/pwas_results/blacks/${drug}/predicted_levels/blacks_${drug}_PCAIR_PAV_filtered_${model_pop}_baseline_rho0.1_zpval0.05.txt
   done
 done
@@ -57,8 +42,8 @@ Used R in command line to execute code.
 ``` {}
 library(data.table)
 "%&%" = function(a,b) paste(a,b,sep="")
-model_list <- c("AFA", "CAU", "HIS", "CHN", "ALL")
-drug_list <- c("clop", "apix", "riva", "warf")
+model_list <- c("AFA", "HIS", "CHN", "ALL")
+drug_list <- c("clop_noac")
 
 for(model in model_list){
   for(drug in drug_list){
