--- a/analysis/association_studies_gemma.Rmd
+++ b/analysis/association_studies_gemma.Rmd
@@ -11,24 +11,26 @@ editor_options:
 
 The output from PrediXcan was converted and is now used as input for GEMMA.
 
-## Loop to run PrediXcan through GEMMA to account for relatedness
+## GEMMA analysis
 
 ```{}
-declare -a drugs=("clop" "apix" "riva")
-declare -a models=("CAU" "ALL" "AFA" "CHN" "HIS")
+
+declare -a drugs=("clop_noac")
+declare -a models=("ALL" "AFA" "CHN" "HIS")
 
 #Use loop to run PrediXcan step two through GEMMA (accounts for relatedness)
 for drug in ${drugs[@]}
   do
   for model in ${models[@]}
     do
-    /usr/local/bin/gemma -g /home/rhea/account_wflow/pwas_results/blacks/${drug}/assoc_gemma_input/blacks_${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05_gemma.txt \
+    /usr/local/bin/gemma -g /home/rhea/account_wflow/pwas_results/blacks/clop_noac/assoc_gemma_input/blacks_clop_noac_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05_gemma.txt \
     -notsnp \
-    -p /home/ashley/account/phenos/${drug}/${drug}_pheno_no_ids.txt \
-    -k /home/ashley/account/covariates/${drug}/blacks_${drug}.cXX.txt \
-    -c /home/ashley/account/covariates/${drug}/${drug}_covariates.txt \
+    -p /home/rhea/account_wflow/phenos/clop_noac/clop_noac_rn_pheno_no_ids.txt \
+    -k /home/rhea/account_wflow/covariates/clop_noac/blacks_clop_noac.cXX.txt \
+    -c /home/rhea/account_wflow/covariates/clop_noac/clop_noac_covariates.txt \
     -lmm 4 \
     -o ${drug}_PCAIR_PAV_filtered_${model}_baseline_rho0.1_zpval0.05
   done
 done
+
 ```
