--- a/analysis/correct_bonferroni.Rmd
+++ b/analysis/correct_bonferroni.Rmd
@@ -9,7 +9,88 @@ editor_options:
 
 ## Introduction
 
-```{r}
+This code accounts for multiple testing correction for association results with Bonferroni and BH FDR.
 
+## Correct Bonferroni
+
+```{}
+#Import necessary libraries
+library(data.table)
+library(dplyr)
+library(tibble)
+
+#Create function to paste in drug name
+"%&%" = function(a,b) paste(a,b,sep="")
+
+#Create list for file input variants
+drug_list <- c("clop_noac")
+model_list <- c("ALL", "AFA", "CHN", "HIS") 
+
+#Make a data frame from combined PrediXcan results that includes chr #, bp, and BH and Bonferroni adj p-value
+  #Read in output files
+  #Create vector of p-values
+  #Adjust p-values with BH and bonferroni methods
+  #Add new columns with adjusted p-values to data frame
+  #Join PrediXcan data frame with bp_chrome data frame to add columns with chr # and bp
+  #Remove old/inaccurate chr and bp columns
+  #Ouput data frame into directory
+for (drug in drug_list) {
+  for (model in model_list) {
+    assoc_file <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/assoc_gemma_output/" %&% drug %&% "_PCAIR_PAV_rn_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.assoc.txt")
+    pvalues <- select(assoc_file, contains("p_wald"))
+    pvalues <- as.vector(unlist(pvalues))
+    pvalues_adjusted_BH <- p.adjust(pvalues, method = "BH")
+    pvalues_adjusted_BF <- p.adjust(pvalues, method = "bonferroni")
+    assoc_file <- add_column(assoc_file,  pvalues_adjusted_BH = pvalues_adjusted_BH , .before = "p_lrt")
+    assoc_file <- add_column(assoc_file,  pvalues_adjusted_bonferroni = pvalues_adjusted_BF, .before = "p_lrt")
+    fwrite(assoc_file, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_PCAIR_PAV_rn_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt", sep = "\t", quote = F)
+  }
+}
+```
+
+### Combine Significant Hits
+```{}
+#Import necessasry libraries
+library(data.table)
+library(dplyr)
+library(tibble)
+
+#Create function to paste in model name
+"%&%" = function(a,b) paste(a,b,sep="")
+
+#Create list of models for file input
+model_list <- c("ALL", "AFA")
+drug_list <- c("clop_noac")
+
+#Make a data frame with all results from each model per drug
+  #Read in file
+  #Add column containing model name
+  #Compile significant subsets into single data frame
+for(drug in drug_list){
+  for(model in model_list){
+    output <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_PCAIR_PAV_rn_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt")
+    output <- add_column(output, model = model, .before = "chr")
+    output <- add_column(output, drug = drug, .before = "chr")
+    if(exists("all_assoc")){
+      all_assoc<-merge(x = all_assoc, y = output, all = TRUE)
+    }
+    else{
+      all_assoc<-output
+    }
+  }
+  
+  #subset at different thresholds
+  all_sig<-subset(all_assoc, pvalues_adjusted_BH < .75)
+  most_sig<-subset(all_assoc, pvalues_adjusted_BH < .1)
+  BF_not1<-subset(all_assoc, pvalues_adjusted_bonferroni < 1)
+  BF_sig<-subset(all_assoc, pvalues_adjusted_bonferroni < .05)
+   
+  #Output data frames into directory
+  fwrite(all_assoc, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_allassoc_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(all_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(most_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_most_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_not1, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFnot1_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFsig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+}
 ```
 
