--- a/analysis/correct_bonferroni.Rmd
+++ b/analysis/correct_bonferroni.Rmd
@@ -60,25 +60,22 @@ library(tibble)
 
 #Create list of models for file input
 model_list <- c("ALL", "AFA")
-drug_list <- c("clop_noac")
 
 #Make a data frame with all results from each model per drug
   #Read in file
   #Add column containing model name
   #Compile significant subsets into single data frame
-for(drug in drug_list){
-  for(model in model_list){
-    output <- fread("/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_PCAIR_PAV_rn_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt")
-    output <- add_column(output, model = model, .before = "chr")
-    output <- add_column(output, drug = drug, .before = "chr")
-    if(exists("all_assoc")){
-      all_assoc<-merge(x = all_assoc, y = output, all = TRUE)
-    }
-    else{
-      all_assoc<-output
-    }
+for(model in model_list){
+  output <- fread("/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_PCAIR_PAV_rn_filtered_" %&% model %&% "_baseline_rho0.1_zpval0.05.adj.txt")
+  output <- add_column(output, model = model, .before = "chr")
+  output <- add_column(output, drug = drug, .before = "chr")
+  if(exists("all_assoc")){
+      all_assoc<-left_join(x = all_assoc, y = output, all = TRUE)
   }
-  
+  else{
+    all_assoc<-output
+  }
+
   #subset at different thresholds
   all_sig<-subset(all_assoc, pvalues_adjusted_BH < .75)
   most_sig<-subset(all_assoc, pvalues_adjusted_BH < .1)
@@ -86,11 +83,11 @@ for(drug in drug_list){
   BF_sig<-subset(all_assoc, pvalues_adjusted_bonferroni < .05)
    
   #Output data frames into directory
-  fwrite(all_assoc, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_allassoc_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
-  fwrite(all_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
-  fwrite(most_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_most_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
-  fwrite(BF_not1, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFnot1_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
-  fwrite(BF_sig, "/home/rhea/account_wflow/pwas_results/blacks/" %&% drug %&% "/adj_assoc_output/" %&% drug %&% "_rn_BFsig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(all_assoc, "/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_rn_allassoc_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(all_sig, "/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_rn_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(most_sig, "/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_rn_most_sig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_not1, "/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_rn_BFnot1_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
+  fwrite(BF_sig, "/home/rhea/account_wflow/pwas_results/blacks/clop_noac/adj_assoc_output/clop_noac_rn_BFsig_PCAIR_PAV_filtered_baseline_rho0.1_zpval0.05.adj.txt", na = "NA", quote = F, sep = "\t", col.names = T) 
 }
 ```
 
